# PostgreSQLConnector

./: LICENSE  README.md  pyproject.toml
example/: Tutorial.ipynb
src/: postgres_connector.py
tests/: test_postgres_connector.py
